--- a/about.html
+++ b/about.html
@@ -22,16 +22,16 @@
 	
 	<h2>About Me</h2>
 
-	<p> I am Arun Palaniappan, doing masters in data science. I like to look at the night sky and count the stars.  Apart from that my areas of study broadly includes bandit algorithms, economics, convex optimisation, statistics and randomized algorithms. </p>
-	<p> I'm currently studying the field of online learning, a branch of theoretical machine learning that I've been very fascinated by, and attempting to make contributions towards solving the contextual bandits problem. This blog is a collection of my notes for my study of bandits. </p>
-	<p> In the past, I've also dabbled in areas like dynamic pricing using reinforcement learning, ransomware detection and mitigation techniques and briefly deep learning for EEG data classification. Will add more information here over time.</p>
+	<p> I am Arun Palaniappan, doing masters in data science. My areas of study broadly are economics and machine learning. Currently, I am interested in bandit algorithms, adversarial machine learning and optimisation. I am dabbling in these areas connecting them and attempting to make contributions. This blog is a collection of my study notes.</p>
+	
+	<!-- http://mitliagkas.github.io/rs.pdf
+	<p> In the past, I've also dabbled in areas like dynamic pricing using reinforcement learning, ransomware detection and mitigation techniques and briefly deep learning for EEG data classification. Will add more information here over time.</p> Make this as projects.-->
 
 	<!-- <p> https://alsweigart.com/ Look here for some ideas.<p> -->
 
 	<h2> Contact </h2>
 	<ul>
-		<li>Mail id: <a href="mailto:aruntr.blog@gmail.com">aruntr.blog@gmail.com</a></li>
-		<li><a href="https://www.linkedin.com/in/arun-palaniappan-tr/">Linkedin</a></li> 
+		<li>Mail id: <a href="mailto:arun.palaniappan1999@gmail.com">arun.palaniappan1999@gmail.com</a></li>
 	</ul>
 
 </body>
