Added FCI paper

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 	
 	<h2>About Me</h2>
 
-	<p> I am Arun Palaniappan, doing masters in data science. My areas of study broadly are economics and machine learning. Currently, I am interested in bandit algorithms, adversarial machine learning and optimisation. I am dabbling in these areas connecting them and attempting to make contributions. This blog is a collection of my study notes.</p>
+	<p> I am Arun Palaniappan, doing masters in data science. My academic interests are economics and machine learning. Currently, I am studying bandit algorithms, adversarial machine learning and optimisation. I am dabbling in these areas connecting them and attempting to make contributions. This blog is a collection of my study notes.</p>
 	
 	<!-- http://mitliagkas.github.io/rs.pdf
 	<p> In the past, I've also dabbled in areas like dynamic pricing using reinforcement learning, ransomware detection and mitigation techniques and briefly deep learning for EEG data classification. Will add more information here over time.</p> Make this as projects.-->
@@ -31,7 +31,7 @@
 
 	<h2> Contact </h2>
 	<ul>
-		<li>Mail id: <a href="mailto:arun.palaniappan1999@gmail.com">arun.palaniappan1999@gmail.com</a></li>
+		<li>Twitter: <a href="https://twitter.com/arunpalaniappa2/">Arun Palaniappan</a></li>
 	</ul>
 
 </body>
