--- a/about.html
+++ b/about.html
@@ -28,10 +28,12 @@
 	<p> In the past, I've also dabbled in areas like dynamic pricing using reinforcement learning, ransomware detection and mitigation techniques and briefly deep learning for EEG data classification. Will add more information here over time.</p> Make this as projects.-->
 
 	<!-- <p> https://alsweigart.com/ Look here for some ideas.<p> -->
-
+	<br><br>
+	<a href="current_cv.pdf">Resume</a>
+	
 	<h2> Contact </h2>
 	<ul>
-		<li>Twitter: <a href="https://twitter.com/arunpalaniappa2/">Arun Palaniappan</a></li>
+		<li style="list-style:none" >Twitter: <a href="https://twitter.com/arunpalaniappa2/">Arun Palaniappan</a></li>
 	</ul>
 
 </body>
