Changed file structure

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
 	<!-- <p> https://alsweigart.com/ Look here for some ideas.<p> -->
 	<br><br>
-	<a href="current_cv.pdf">Resume</a>
+	<a href="files/resume/current_cv.pdf">Resume</a>
 	
 	<h2> Contact </h2>
 	<ul>
