--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h2>Working Papers</h2>
 				<ul class="paper-list">
 				<li>
-					<a class="paper-link" href="2020-10/FCI.pdf">Data-Driven Analysis of Food Corporation of India’s Operations and Recommendations</a>(Submitted to DSE Winter School 2020)
+					<a class="paper-link" href="files/FCI.pdf">Data-Driven Analysis of Food Corporation of India’s Operations and Recommendations</a>(Submitted to DSE Winter School 2020)
 					
 				</li>
 			</div>
