--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		gtag('js', new Date());
 		gtag('config', 'UA-168258233-1');
 	</script>
-	<title>Bandit's Note</title>
+	<title>APT's Study Notes</title>
 	<link rel = "stylesheet" type = "text/css" href = "index.css" />
 </head>
 
 <body>
 	
-	<div class="header">
+	<!-- <div class="header">
 		<h2>Bandit's Note</h2>
-	</div>
+	</div> -->
 	
 	<div class="container">
 		<div class="content">
