--- a/about.html
+++ b/about.html
@@ -22,12 +22,14 @@
 	
 	<h2>About Me</h2>
 
-	<p> I am Arun Pa Thiagarajan, doing masters in data science. My academic interests are machine learning, economics and network science. Currently, I am learning bandit algorithms, game theory and network science. I am dabbling in these areas connecting them and attempting to make contributions. This blog is a collection of my study notes.</p>
+	<p> I am Arun Pa Thiagarajan and I am in my fifth year of MSc data science program at PSG College of Technology. My long term vision is making education 
+	
+	My academic interests are machine learning, economics and network science. Currently, I am learning bandit algorithms, game theory and network science. I am dabbling in these areas connecting them and attempting to make contributions.</p>
+	
+	<p> Long Term Vision: Making education accessible to all </p>
 	
 	<!-- http://mitliagkas.github.io/rs.pdf
 	<p> In the past, I've also dabbled in areas like dynamic pricing using reinforcement learning, ransomware detection and mitigation techniques and briefly deep learning for EEG data classification. Will add more information here over time.</p> Make this as projects.-->
-
-	<!-- <p> https://alsweigart.com/ Look here for some ideas.<p> -->
 	<br><br>
 	<a href="files/resume/current_cv.pdf">Resume</a>
 	
