Added new blog post, made changes to about and book shelf

--- a/about.html
+++ b/about.html
@@ -22,16 +22,11 @@
 	
 	<h2>About Me</h2>
 
-	<p> I am Arun Pa Thiagarajan and I am in my fifth year of MSc data science program at PSG College of Technology. 
-	
-	My academic interests are machine learning, economics and network science. I like tinkering with data.
+    <p> I am Arun Palaniapan Thiagarajan and I am in my fifth year of MSc data science program at PSG College of Technology. I like to study about economics and computer security. The underlying technique is the use of data science and machine learning techniques in these domains.</p>
 	
 	<!-- http://mitliagkas.github.io/rs.pdf
 	<p> In the past, I've also dabbled in areas like dynamic pricing using reinforcement learning, ransomware detection and mitigation techniques and briefly deep learning for EEG data classification. Will add more information here over time.</p> Make this as projects.-->
-	<br><br>
-	<a href="files/resume/current_cv.pdf">Resume</a>
-	
-	<h2> Contact </h2>
+    <p>Resume available on request.</p>
 	<ul>
 		<li style="list-style:none" >Twitter: <a href="https://twitter.com/arunpalaniappa2/">Arun Palaniappan</a></li>
 	</ul>
