--- a/bookshelf.html
+++ b/bookshelf.html
@@ -5,19 +5,25 @@
 <!-- CSS to be updates soon -->
 <body>
 
+<!--    <h2>All time books - books which I look back very often</h2>
+    <ul>
+        <li> Thirukkural </li>
+    </ul>  -->
+
 	<h2>Current Readings:</h2>
+
 	<ul>
-		<li> Oct 2020 - Present <br>
-		Cracking Creativity : The Secrets of Creative Genius by Michael Michalko</li>
+		<li> Cracking Creativity : The Secrets of Creative Genius by Michael Michalko</li>
+        <li> Pragmatic Programmer </li>
 	</ul>
-	
-	<h2>Some time back:</h2>
-	<ul>
-		<li> Sept 2020 <br>
-		Backstage by Montek Singh Ahluwalia </li>
-		<li> Autobiography of a yogi by Paramahansa Yogananda</li>
-		<li> Page To be updated soon </li>
-	</ul>
-	
-</body>
+
+I consider myself lucky to have read these books over the past many years:
+    <ul>
+        <li>Poor Economics by Esther Duflo and Abhijit Banerjee</li>
+        <li>Deep Work and So Good They can't ignore you by Calvin Newport </li>
+		<li>Autobiography of a yogi by Paramahansa Yogananda</li>
+        <li>Surely you are joking, Mr Feynman! by Richard Feynman</li> 
+        <li>The Innovators by Walter Isaacson<li>
+        <li>List to be updated soon<li>
+    <ul>
 </html>
