--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		gtag('js', new Date());
 		gtag('config', 'UA-168258233-1');
 	</script>
-	<title>APT's Study Notes</title>
+	<title>Home</title>
 	<link rel = "stylesheet" type = "text/css" href = "index.css" />
 </head>
 
