--- a/bookshelf.html
+++ b/bookshelf.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6KVQ3TNZY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-M6KVQ3TNZY');
+    </script>
+
 	<title>Bookshelf</title>
 </head>
 <!-- CSS to be updates soon -->
