added no rules rules

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -23,16 +23,15 @@
 
 	<ul>
 		<li> Cracking Creativity : The Secrets of Creative Genius by Michael Michalko</li>
-        <li> Pragmatic Programmer </li>
 	</ul>
 
-I consider myself lucky to have read these books over the past many years:
+I consider myself lucky to have read these books over the past years:
     <ul>
         <li>Poor Economics by Esther Duflo and Abhijit Banerjee</li>
         <li>Deep Work and So Good They can't ignore you by Calvin Newport </li>
 		<li>Autobiography of a yogi by Paramahansa Yogananda</li>
         <li>Surely you are joking, Mr Feynman! by Richard Feynman</li> 
-        <li>The Innovators by Walter Isaacson<li>
-        <li>List to be updated soon<li>
+        <li>The Innovators by Walter Isaacson</li>
+        <li>No Rules Rules: Netflix and the Culture of Reinvention by Reed Hastings and Erin Meyer</li>
     <ul>
 </html>
