Added new blog, tamil version of webpage

--- a/about.html
+++ b/about.html
@@ -14,20 +14,21 @@
 </head>
 
 <body class="contents">
-	<div class="topnav">
+    <div="topnav">
 		<a href="index.html">Home</a>
 		<a class="active" href="about.html">About</a> 
 	</div>
 	
 	<h2>About Me</h2>
 
-    <p> I am Arun Palaniapan Thiagarajan and I am in my fifth year of MSc data science program at PSG College of Technology. I like to study about economics and computer security. The underlying technique is the use of data science and machine learning techniques in these domains.</p>
+    <p> I am Arun Palaniapan Thiagarajan and I did my MSc in Data Science at PSG College of Technology. I like to study about security and privacy. An underlying theme is the use of machine learning techniques for the problems in these domains. I like to read books, especially on tamil literature. Here is a link to <a href="bookshelf.html">bookshelf</a></p>
 	
 	<!-- http://mitliagkas.github.io/rs.pdf
 	<p> In the past, I've also dabbled in areas like dynamic pricing using reinforcement learning, ransomware detection and mitigation techniques and briefly deep learning for EEG data classification. Will add more information here over time.</p> Make this as projects.-->
     <p>Resume available on request.</p>
 	<ul>
 		<li style="list-style:none" >Twitter: <a href="https://twitter.com/arunpalaniappa2/">Arun Palaniappan</a></li>
+        <li style="list-style:none" >Email: <a href="mailto:arunpalaniappan1999@gmail.com">arunpalaniappan1999@gmail.com</a></li>
 	</ul>
 
 </body>
