added active work

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                     <li>
                         <br><span class="active-works-link">Working on detecting malware from network traffic.</span>
                     </li>
+                    <li> Taking the course Machine Learning with Graphs CS224W (via YouTube).
+                    </li>
                 </ul>
             </div>
 
