--- a/index.html
+++ b/index.html
@@ -19,27 +19,33 @@
     <div class="topnav">
         <a href="ta/index.html">Tamil Version</a>
         <a href="#updates">Updates</a>
+        <a href="#now">Now</a>
         <a href="#about">About me</a>
+        <a href="#experience">Experience</a>
         <a href="#writings">Writings</a>
         <a href="#contact">Contact</a>
-        <a href="#now">Now</a>
     </div>
+
     <h2 id="updates">Updates</h2>
     <p>I am in the job market actively looking for Machine Learning enginnering/Data Scientist roles. My resume can be found <a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">here</a>.
     Feel free to reach out to me.</p>
+
     <h2 id="about">About Me</h2>
-    
     <p> 
-    Arun received his MSc degree in Data Science from PSG College of Technology, Coimbatore. During the day time, Arun works as a project assistant at IIT-Madras on cybersecurity, mainly focusing on detecting malwares in network traffic. During his free time, Arun contributes to the DeepChem project. The <a href="https://github.com/deepchem/deepchem">DeepChem</a> project is an open-source project which aims to democratize AI for scientific applications. Arun helps on building tools for representing scientific dataset in suitables ways for use in machine learning applications, building deep learning models with different architectures and benchmarking them on scientific datasets.
+    Arun received his MSc degree in Data Science from PSG College of Technology, Coimbatore. During his free time, Arun contributes to the DeepChem project. The <a href="https://github.com/deepchem/deepchem">DeepChem</a> project is an open-source project which aims to democratize AI for scientific applications. Arun helps on building tools for representing scientific dataset in suitables ways for use in machine learning applications, building deep learning models with different architectures and benchmarking them on scientific datasets.
     The other hobbies of Arun are reading literature works and studying privacy related implications of big data.
     The long-term mission of Arun is to make knowledge and education widely and freely accessible to all. To this end, he support charities like Agaram Foundation, Wikimedia and a couple more.
     </p>
 
-    <h2 id="#writings">Writings</h2>
+    <h2 id="experience">Experience</h2>
+    <div class"experience">
+        <li> June 21 - Feb 22: Project Assistant, Indian Institute of Technology Madras. Job Description: Arun worked on designing a malware detection framework and implemented predictive modelling algorithms for detecting malware from network traffic data. </li>
+    </div>
+
+    <h2 id="writings">Writings</h2>
     <div class="content">
-        <p>Some of my writings can also be found in <a href="https://medium.com/@arunppsg">Medium.</a></p>
         <div class="papers">
-            <h2>Unpublished Manuscripts</h2>
+            <h3>Unpublished Manuscripts</h3>
             <ul class="paper-list">
             <li>
                 <a href="files/FCI.pdf">Data-Driven Analysis of Food Corporation of India’s Operations and Recommendations</a>(Submitted to DSE Winter School 2020)
@@ -48,7 +54,8 @@
         </div>
 
         <div class="essays">
-            <h2>Essays</h2>
+            <h3>Essays</h3>
+        <p>These days I am mostly writing in Medium and they can be found <a href="https://medium.com/@arunppsg">here.</a></p>
             <ul class="essay-list">
             <li>
                 June 04, 2021 <a class="essay-link" href=2021/high-speed-packet-capture-using-packet-mmap-technique.html>
@@ -80,17 +87,21 @@
         </div>
     </div>
 
+    <h2 id="now">Now</h2>
+    <div id="now">
+    (About <a href="https://nownownow.com/about">nowpage</a>) I have been mostly working on adding a couple of model architectures to DeepChem and learning about Graph Neural Networks.
+    </div> 
+
     <h2 id="bookshelf">Bookshelf</h2>
 
     I consider myself lucky to have read these books over the past years:
     <ul>
         <li> Tamil: Sivagamiyin Sapatham, Parthibhan kanavu, Ponniyin Selvan
-        <li> Economics and Finance: Poor Economics, 
-        <li> Self-help: Deep Work, So good they can't ignore you, Autobiography of a yogi by Paramahansa Yogananda
-        <li>Surely you are joking, Mr Feynman! by Richard Feynman</li> 
-        <li>The Innovators, Steve Jobs by Walter Isaacson</li>
-        <li>No Rules Rules: Netflix and the Culture of Reinvention by Reed Hastings and Erin Meyer</li>
-        <li>Coming Soon...
+        <li> Economics and Finance: Poor Economics, Bad Money 
+        <li> Self-help: Deep Work, So good they can't ignore you, 
+        <li> Biographies/Autobiographies: The Innovators, Steve Jobs by Walter Isaacson, Autobiography of a yogi by Paramahansa Yogananda</li>
+        <li> Others: No Rules Rules: Netflix and the Culture of Reinvention by Reed Hastings and Erin Meyer, Surely you are joking, Mr Feynman! by Richard Feynman</li>
+        <li> The Book of Why by Judea Pearl </li>
     </ul>
     
     <h2 id="contact">Contact</h2>
@@ -98,7 +109,7 @@
     <a href="mailto:arunp.psg@gmail.com">mail-id</a></li>
     <a href="https://www.linkedin.com/in/arunppsg/">Linkedin</a>
     <div class="footer">
-        Last update: 16 August 2022.
+        Last update: 28 Feb 2022.
     </div>
 
 </body>
