removed updates section

--- a/index.html
+++ b/index.html
@@ -26,15 +26,10 @@
         <a href="#contact">Contact</a>
     </div>
 
-    <h2 id="updates">Updates</h2>
-    <p>I am in the job market actively looking for Machine Learning enginnering/Data Scientist roles. My resume can be found <a href="https://raw.githubusercontent.com/arunppsg/resume/master/pdf/resume.pdf">here</a>.
-    Feel free to reach out to me.</p>
-
     <h2 id="about">About Me</h2>
     <p> 
-    Arun received his MSc degree in Data Science from PSG College of Technology, Coimbatore. During his free time, Arun contributes to the DeepChem project. The <a href="https://github.com/deepchem/deepchem">DeepChem</a> project is an open-source project which aims to democratize AI for scientific applications. Arun helps on building tools for representing scientific dataset in suitables ways for use in machine learning applications, building deep learning models with different architectures and benchmarking them on scientific datasets.
+    Arun works as a Machine Learning Engineer at Deep Forest Sciences. Arun received his MSc degree in Data Science from PSG College of Technology, Coimbatore. During his free time, Arun contributes to the DeepChem project. The <a href="https://github.com/deepchem/deepchem">DeepChem</a> project is an open-source project which aims to democratize AI for scientific applications. Arun helps on building tools for representing scientific dataset in suitables ways for use in machine learning applications, building deep learning models with different architectures and benchmarking them on scientific datasets.
     The other hobbies of Arun are reading literature works and studying privacy related implications of big data.
-    The long-term mission of Arun is to make knowledge and education widely and freely accessible to all. To this end, he support charities like Agaram Foundation, Wikimedia and a couple more.
     </p>
 
     <h2 id="experience">Experience</h2>
@@ -109,7 +104,7 @@
     <a href="mailto:arunp.psg@gmail.com">mail-id</a></li>
     <a href="https://www.linkedin.com/in/arunppsg/">Linkedin</a>
     <div class="footer">
-        Last update: 28 Feb 2022.
+        Last update: 8 Aug 2022.
     </div>
 
 </body>
