--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <div class="topnav">
         <a href="ta/index.html">Tamil Version</a>
         <a href="#updates">Updates</a>
-        <a href="#now">Now</a>
         <a href="#about">About me</a>
         <a href="#experience">Experience</a>
         <a href="#writings">Writings</a>
@@ -34,12 +33,20 @@
 
     <h2 id="experience">Experience</h2>
     <div class"experience">
+        <li> Mar 22 - Present: Machine Learning Devops Engineer at Deep Forest Sciences
+        </li>
         <li> June 21 - Feb 22: Project Assistant, Indian Institute of Technology Madras. Job Description: Arun worked on designing a malware detection framework and implemented predictive modelling algorithms for detecting malware from network traffic data. </li>
     </div>
 
     <h2 id="writings">Writings</h2>
     <div class="content">
         <div class="papers">
+            <h3>Posters</h3>
+            <ul class="paper-list">
+            <li>
+              <a href="files/healthcare_bias.pdf">Potential Biases in Using Machine Learning for Healthcare Applications</a> (presented at RBCDSAI-FCAI Deployable AI - 2022 conference)
+            </li>
+            </ul>
             <h3>Unpublished Manuscripts</h3>
             <ul class="paper-list">
             <li>
@@ -82,29 +89,15 @@
         </div>
     </div>
 
-    <h2 id="now">Now</h2>
-    <div id="now">
-    (About <a href="https://nownownow.com/about">nowpage</a>) I have been mostly working on adding a couple of model architectures to DeepChem and learning about Graph Neural Networks.
-    </div> 
-
     <h2 id="bookshelf">Bookshelf</h2>
-
-    I consider myself lucky to have read these books over the past years:
-    <ul>
-        <li> Tamil: Sivagamiyin Sapatham, Parthibhan kanavu, Ponniyin Selvan
-        <li> Economics and Finance: Poor Economics, Bad Money 
-        <li> Self-help: Deep Work, So good they can't ignore you, 
-        <li> Biographies/Autobiographies: The Innovators, Steve Jobs by Walter Isaacson, Autobiography of a yogi by Paramahansa Yogananda</li>
-        <li> Others: No Rules Rules: Netflix and the Culture of Reinvention by Reed Hastings and Erin Meyer, Surely you are joking, Mr Feynman! by Richard Feynman</li>
-        <li> The Book of Why by Judea Pearl </li>
-    </ul>
+      <p>See goodreads profile <a href="https://www.goodreads.com/user/show/140754661-arun">here</a></p>
     
     <h2 id="contact">Contact</h2>
     <a href="https://twitter.com/arunppsg">Twitter</a>
-    <a href="mailto:arunp.psg@gmail.com">mail-id</a></li>
+    <p>Mail id: arunpalaniappan1999 DOT gmail DOT com</p>
     <a href="https://www.linkedin.com/in/arunppsg/">Linkedin</a>
     <div class="footer">
-        Last update: 8 Aug 2022.
+        Last update: 21 Aug 2022.
     </div>
 
 </body>
